v0.4/src/frontend/my_parser.c
#include "my_parser.h"

#include <assert.h>
#include <stdlib.h>
#include <stdarg.h>
#include <stdbool.h>
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <string.h>
#include <time.h>
#include <windows.h>

#include "main.h"
#include "my_memory.h"
#include "object.h"
#include "type.h"

#include "headers_frontend.h"
#include "headers_intermediate.h"
#include "predefined.h"
#include "headers_intermediate_symbol.h"

#include "headers_backend_value.h"

#include "headers_utils.h"


#define MAX_PARSE_ERRORS 16


void* parser_constructor(void* self, va_list* ap);
void* parser_destructor(void* self);

const struct Type _class_parser = {
    .size = sizeof(struct Parser),
    .constructor = parser_constructor,
    .destructor = parser_destructor
};


const void* Parser = &_class_parser;



// ... = new(Parser, source);

void* parser_constructor(void* _self, va_list* ap) {
#if defined(DEBUG)
    vi_log("parser_constructor(self: %#x)\n", _self);
#endif // DEBUG

    struct Parser* self = _self;
    assert(IS_PARSER(self));

    self->source = va_arg(*ap, const void*);
    assert(IS_SOURCE(self->source));

    self->token_index = 0;
    self->tokens = NULL;

    self->symbol_table_stack = NULL;
    self->program_ast = NULL;

    self->err_count = 0;
    self->had_error = false;

    self->parsing_loop = false;
    self->parsing_fun = false;
    self->parsing_class = false;
    self->parsing_class_has_superclass = false;

#if defined(DEBUG)
    vi_log("ret parser_constructor(self: %#x)\n", _self);
#endif // DEBUG

    return _self;
}


void* parser_destructor(void* _self) {
	#if defined(DEBUG)
		vi_log("parser_destructor(self: %#x)\n", _self);
	#endif // DEBUG

    struct Parser* self = _self;
    assert(IS_PARSER(self));

    if (self->program_ast)
        delete(self->program_ast);

    if (self->symbol_table_stack)
        delete(self->symbol_table_stack);

	#if defined(DEBUG)
		vi_log("ret parser_destructor(self: %#x)\n", _self);
	#endif // DEBUG

    return _self;
}


#define CUR_TOKEN(parser)	((struct Token *) (parser->tokens[parser->token_index]))
#define PREV_TOKEN(parser)	((struct Token *) (parser->tokens[parser->token_index - 1]))

#define P_MATCH(parser, expected) \
		((parser->token_index < parser->tokens_count) && \
			(((const struct Token *) parser->tokens[parser->token_index])->token_type.ordinal == (expected.ordinal)))

#define P_CONSUME(parser, expected) \
		((parser->token_index < parser->tokens_count) && \
			(((const struct Token *) parser->tokens[parser->token_index])->token_type.ordinal == (expected.ordinal)) && \
			(parser->token_index++))

#define P_ADVANCE(parser) \
		((parser->token_index < parser->tokens_count) && (parser->token_index++))

#define P_PEEK_NEXT(parser, expected) \
	(((const struct Token *) parser->tokens[parser->token_index + 1])->token_type.ordinal == (expected.ordinal))


bool p_match_any(const struct Parser* self, int count, ...) {
    va_list ap;
    va_start(ap, count);

    struct Token* token = CUR_TOKEN(self);

    for (uint32_t i = 0; i < count; i++) {
        const struct TokenType expected = va_arg(ap, const struct TokenType);

        if (token->token_type.ordinal == expected.ordinal) {
            va_end(ap);
            return true;
        }
    }

    va_end(ap);
    return false;
}

/*
void p_advance(struct Parser* self) {
    struct Token* token = CUR_TOKEN(self);
    if (token->token_type.ordinal != TOKEN_TYPE_EOF.ordinal) {
        self->token_index++;
    }
}

bool p_consume(struct Parser* self, struct TokenType expected) {
    if (P_MATCH(self, expected)) {
        P_ADVANCE(self);
        return true;
    }
    return false;
}
// */




void p_flag_error_va(
    struct Parser* self,
    bool display_line, const uint32_t line_number,
    const char* err_line, const uint32_t err_index, const uint32_t err_token_length,
    const char* err_msg, va_list* ap
) {

    // set color to red
	#if defined(_WIN32)
		HANDLE consoleHandle = GetStdHandle(STD_ERROR_HANDLE);
		CONSOLE_SCREEN_BUFFER_INFO consoleInfo;
		GetConsoleScreenBufferInfo(consoleHandle, &consoleInfo);

		WORD savedAttr = consoleInfo.wAttributes;

		SetConsoleTextAttribute(consoleHandle, FOREGROUND_RED);
	#else
		fprintf(stderr, COLOR_RED);
	#endif

    fprintf(stderr, "\n");
    vfprintf(stderr, err_msg, *ap);
    fprintf(stderr, "\n");

    if (display_line) {
        fprintf(stderr, "-%03d-| ", line_number);

        for (uint32_t i = 0; err_line[i] != '\0'; i++) {
            char c = err_line[i];

            if ('\t' == c)
                c = ' ';

            fprintf(stderr, "%c", c);
        }

        for (uint32_t i = 0; i < (err_index + 7); i++)
            fprintf(stderr, " ");

        for (uint32_t i = 0; i < err_token_length; i++)
            fprintf(stderr, "^");

        fprintf(stderr, "\n");
    }

    // restore the original color
	#if defined(_WIN32)
		SetConsoleTextAttribute(consoleHandle, savedAttr);
	#else
		fprintf(stderr, COLOR_RESET);
	#endif

    if (is_prompt_mode()) return;

    if (self->err_count >= MAX_PARSE_ERRORS) {
        fprintf(stderr, "\nToo many errors!\n");
        exit(EXIT_FAILURE);
    }

    self->err_count++;
}


void p_raise_error(
    struct Parser* self,
    const struct Token* err_token,
    const char* err_msg, ...
) {

    if (self->had_error) {
        return;
    }

    self->had_error = true;

    va_list ap;
    va_start(ap, err_msg);

    if (NULL == err_token) {
        p_flag_error_va(self, false, 0, NULL, 0, 0, err_msg, &ap);
    }
    else {
        const int line_index = err_token->line_index;
        const char* err_line = SOURCE_GET_LINE(self->source, line_index);
        const int err_index = err_token->start_index;

        p_flag_error_va(
            self, true, (line_index + 1),
            err_line, err_index, err_token->length, err_msg, &ap
        );
    }

    va_end(ap);
}




void p_raise_error_expr(
    struct Parser* self,
    const void* expr,
    const char* err_msg, ...
) {

    if (self->had_error) {
        return;
    }

    self->had_error = true;

    va_list ap;
    va_start(ap, err_msg);

    const struct Token* lmost = get_leftmost_token(expr);
    const struct Token* rmost = get_rightmost_token(expr);

    // set color to red
	#if defined(_WIN32)
		HANDLE consoleHandle = GetStdHandle(STD_ERROR_HANDLE);
		CONSOLE_SCREEN_BUFFER_INFO consoleInfo;
		GetConsoleScreenBufferInfo(consoleHandle, &consoleInfo);
		WORD savedAttr = consoleInfo.wAttributes;
		SetConsoleTextAttribute(consoleHandle, FOREGROUND_RED);
	#else
		fprintf(stderr, COLOR_RED);
	#endif

    fprintf(stderr, "\n");
    vfprintf(stderr, err_msg, ap);
    fprintf(stderr, "\n");

    if (lmost->line_index == rmost->line_index) {
        const int line_number = lmost->line_index + 1;
        fprintf(stderr, "-%03d-| ", line_number);

        const char* err_line = SOURCE_GET_LINE(self->source, lmost->line_index);
        const int start = lmost->start_index;
        const int end = rmost->start_index + rmost->length;

        for (int i = 0; err_line[i] != '\0'; i++) {
            char c = err_line[i];

            if ('\t' == c) c = ' ';

            fprintf(stderr, "%c", c);
        }

        for (int i = 0; i < (start + 7); i++)
            fprintf(stderr, " ");

        for (int i = 0; i < (end - start); i++)
            fprintf(stderr, "^");

        fprintf(stderr, "\n");
    }

    // what if they are on diff. lines
    else {

    }

    // restore the original color
	#if defined(_WIN32)
		SetConsoleTextAttribute(consoleHandle, savedAttr);
	#else
		fprintf(stderr, COLOR_RESET);
	#endif


    va_end(ap);

    if (is_prompt_mode())
        return;

    if (self->err_count >= MAX_PARSE_ERRORS) {
        fprintf(stderr, "\nParser: Too many errors!\n");
        exit(EXIT_FAILURE);
    }

    self->err_count++;
}




/*
|==============================>
| Declaration parser methods.
|==============================>
*/
void* program(struct Parser* self);

void* import_stmt(struct Parser* self);

void* declaration(struct Parser* self);

void* var_decl(
    struct Parser* self,
    enum DefinitionType def_type, bool init_required
);

void* var_init(
    struct Parser* self, const struct Token* prev_token,
    enum DefinitionType def_type, bool init_required
);


void* val_decl(
    struct Parser* self,
    enum DefinitionType def_type, bool init_required
);

void* val_init(
    struct Parser* self, const struct Token* prev_token,
    enum DefinitionType def_type, bool init_required
);


void* fun_decl(struct Parser* self);
void* function(struct Parser* self, enum DefinitionType def_type);

void* class_decl(struct Parser* self);

/*
|==============================>
| Statement parser methods.
|==============================>
*/
void* stmt(struct Parser* self);

void* expr_stmt(struct Parser* self);
// void *print_stmt(struct Parser *self);

void* if_stmt(struct Parser* self);
void* when_stmt(struct Parser* self);

void* loop_stmt(struct Parser* self);
void* repeat_stmt(struct Parser* self);

void* block_stmt(struct Parser* self);

void* break_stmt(struct Parser* self);
void* continue_stmt(struct Parser* self);
void* ret_stmt(struct Parser* self);


/*
|==============================>
| Expression parser methods.
|==============================>
*/
void *expr(struct Parser* self);

void *assignment(struct Parser* self);

void *logical_or(struct Parser* self);
void *logical_and(struct Parser* self);

void *bitwise_or(struct Parser* self);
void *bitwise_xor(struct Parser* self);
void *bitwise_and(struct Parser* self);

void *equality(struct Parser* self);
void *comparison(struct Parser* self);

void *term(struct Parser* self);
void *factor(struct Parser* self);

void *unary(struct Parser* self);
void *molecule(struct Parser* self);
void *atom(struct Parser* self);






// program -> declaration* EOF ;

void* program(struct Parser* self) {
	#if defined(DEBUG)
		vi_log("program()\n");
	#endif // DEBUG

    bool is_last_ast_null = false;

    uint64_t decls_count = 0;
    void** declarations = NULL;

    uint64_t imports_count = 0;
    void** imports = NULL;

    void* program_symbol_table = (void*) symtabstack_push(self->symbol_table_stack);

    for (
        const struct Token* token = CUR_TOKEN(self);
        (token->token_type.ordinal != TOKEN_TYPE_EOF.ordinal) && (token->token_type.ordinal != TOKEN_TYPE_ERROR.ordinal);
        token = CUR_TOKEN(self)
    ) {

        if (P_MATCH(self, TOKEN_TYPE_IMPORT)) {
            void* importstmt = import_stmt(self);

			if(NULL == import_stmt)
				break;

			// else if(NULL != import_stmt) {
			imports = reallocate(imports, sizeof(void*), ++imports_count);
			imports[imports_count - 1] = importstmt;

			void* import_parser = IMPORT_STMT_PARSER(importstmt);
			void* prog_ast = PARSER_PROGRAM_AST(import_parser);
			symbol_table_copy(program_symbol_table, PROGRAM_AST_SYMBOL_TABLE(prog_ast));
            // }
        }
        else {
            void* decl = declaration(self);

            if (NULL == decl)
                break;

			// else if(NULL != decl) {
            if (self->is_import) {
                if (!IS_CLASS_DECL(decl) && !IS_FUN_DECL(decl) && !IS_VAR_DECL(decl)) {
                    delete(decl);
                    continue;
                }
            }

            if (NULL != decl) {
                declarations = reallocate(declarations, sizeof(void*), ++decls_count);
                declarations[decls_count - 1] = decl;
            }
			// }
        }
    }

    symtabstack_pop(self->symbol_table_stack);	// program_symbol_table

    const char* source_name = SOURCE_INSTREAM(self->source);
    size_t len = strlen(source_name);

    char* program_name = allocate(sizeof(char), len + 1);
    strncpy(program_name, source_name, len);

    void* program_ast = new(
        ProgramAst, program_name, program_symbol_table,
        imports_count, imports,
        decls_count, declarations
	);

	#if defined(DEBUG)
		vi_log("ret program()\n");
	#endif // DEBUG

    return program_ast;
}


void* import_stmt(struct Parser* self) {
	#if defined(DEBUG)
		vi_log("import_stmt()\n");
	#endif // DEBUG

    if (!P_MATCH(self, TOKEN_TYPE_IMPORT)) {
        p_raise_error(
            self, CUR_TOKEN(self),
            "SyntaxError: Expected 'import' found '%.*s'.",
            CUR_TOKEN(self)->length, CUR_TOKEN(self)->start
        );
        return NULL;
    }

    const struct Token* import_token = CUR_TOKEN(self);
    P_ADVANCE(self);

    const struct Token* module_id = NULL;

    if (!P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
        p_raise_error(
            self, import_token,
            "SyntaxError: Expected module's name after 'import'."
        );
        return NULL;
    }
    else {
        module_id = CUR_TOKEN(self);
        P_ADVANCE(self);
    }

    const struct Token* semicolon = NULL;

    if (!P_MATCH(self, TOKEN_TYPE_SEMICOLON)) {
        p_raise_error(
            self, module_id,
            "SyntaxError: Expected ';' after module's name."
        );
        return NULL;
    }
    else {
        semicolon = CUR_TOKEN(self);
        P_ADVANCE(self);
    }

    const char* instream = SOURCE_INSTREAM(self->source);


    size_t ext_len = strlen(extension);
    size_t len = module_id->length + ext_len;

    char* module_name = allocate(sizeof(char), len + 1);
    strncpy(module_name, module_id->start, module_id->length);
    strncpy(module_name + module_id->length, extension, ext_len);

    if (strncmp(instream, module_name, len) == 0) {
        p_raise_error(
            self, module_id,
            "ParseError: Invalid import of current module '%s'.",
            module_name
        );
        free(module_name);
        return NULL;
    }

    void* source = new(Source, module_name);
    source_read_file(source, module_name);

    void* lexer = new(Lexer, source);
    scan(lexer);

    if (LEXER_HAD_ERROR(lexer)) {
        delete(source);
        delete(lexer);
        return NULL;
    }

    void* parser = new(Parser, source);
    parse(parser, true, lexer);

    if (PARSER_HAD_ERROR(parser)) {
        delete(source);
        delete(lexer);
        delete(parser);
        return NULL;
    }

    void* importstmt = new(
        ImportStmt, import_token, module_id, semicolon,
        source, lexer, parser
	);

	#if defined(DEBUG)
		vi_log("ret import_stmt()\n");
	#endif // DEBUG

    return importstmt;
}


void* declaration(struct Parser* self) {
    if (P_MATCH(self, TOKEN_TYPE_IMPORT))
        return import_stmt(self);

    if (P_MATCH(self, TOKEN_TYPE_VAR))
        return var_decl(self, DEF_TYPE_VAR, true);

    else if (P_MATCH(self, TOKEN_TYPE_VAL))
        return val_decl(self, DEF_TYPE_VAL, true);

    else if (P_MATCH(self, TOKEN_TYPE_FUN))
        return fun_decl(self);

    else if (P_MATCH(self, TOKEN_TYPE_CLASS))
        return class_decl(self);

    else
        return stmt(self);
}




// var_decl -> "var" var_init ("," var_init)* ";" ;
// var_init -> IDENTIFIER ("=" expr)?

void* var_decl(
    struct Parser* self,
    enum DefinitionType def_type,
    bool init_required
) {

#if defined(DEBUG)
    vi_log("var_decl()\n");
#endif // DEBUG

    if (!P_MATCH(self, TOKEN_TYPE_VAR)) {
        p_raise_error(
            self, CUR_TOKEN(self),
            "SyntaxError: Expected 'var' found '%.*s'.",
            CUR_TOKEN(self)->length, CUR_TOKEN(self)->start
        );
        return NULL;
    }

    const struct Token* var_token = CUR_TOKEN(self);
    P_ADVANCE(self);

    void* symbol = var_init(self, var_token, def_type, init_required);

    if (NULL == symbol)
        return NULL;


    uint32_t symbols_count = 0;

    void** symbols = allocate(sizeof(void*), ++symbols_count);
    symbols[symbols_count - 1] = symbol;

    const struct Token* comma_token = NULL;

    while (P_MATCH(self, TOKEN_TYPE_COMMA)) {
        comma_token = CUR_TOKEN(self);
        P_ADVANCE(self);

        symbol = var_init(self, comma_token, def_type, init_required);

        if (NULL == symbol) {
            free(symbols);
            return NULL;
        }

        symbols = reallocate(symbols, sizeof(void*), ++symbols_count);
        symbols[symbols_count - 1] = symbol;
    }

    if (!P_CONSUME(self, TOKEN_TYPE_SEMICOLON)) {
        free(symbols);

        p_raise_error(
            self, var_token,
            "SyntaxError: Expected ';' after var statement."
        );

        return NULL;
    }

    symbols = reallocate(symbols, sizeof(void*), ++symbols_count);
    symbols[symbols_count - 1] = NULL;

#if defined(DEBUG)
    vi_log("ret var_decl()\n");
#endif // DEBUG

    return new(VarDecl, symbols);
}


// Grammar
// var_init -> IDENTIFIER ("=" expr)? ;

void* var_init(
    struct Parser* self, const struct Token* prev_token,
    enum DefinitionType def_type, bool init_required
) {

#if defined(DEBUG)
    vi_log("var_init()\n");
#endif // DEBUG

    const struct Token* id_token = NULL;

    if (P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
        id_token = CUR_TOKEN(self);
        P_ADVANCE(self);
    }
    else {
        p_raise_error(
            self, prev_token,
            "SyntaxError: Expected Identifier after '%.*s'.",
            prev_token->length, prev_token->start
        );

        return NULL;
    }

    char* id = allocate(sizeof(char), id_token->length + 1);
    strncpy(id, id_token->start, id_token->length);

    const void* local_symbol_table = symtabstack_get_local_table(self->symbol_table_stack);

    if (NULL != symbol_table_lookup(local_symbol_table, id)) {
        free(id);

        p_raise_error(
            self, id_token,
            "Error: Redefinition of '%s'.", id
        );

        return NULL;
    }


    void* init_expr = NULL;

    if (init_required) {
        if (!P_MATCH(self, TOKEN_TYPE_EQUAL)) {
            free(id);

            p_raise_error(
                self, id_token,
                "Error: Expected some initializer expression."
            );
            return NULL;
        }
        else {
            const struct Token* equal_token = CUR_TOKEN(self);
            P_ADVANCE(self);

            init_expr = expr(self);

            if (NULL == init_expr) {
                free(id);

                p_raise_error(
                    self, equal_token,
                    "SyntaxError: Expected some expression after '='."
                );
                return NULL;
            }
        }
    }

    void** symbol_attributes = allocate(sizeof(void*), TOTAL_NO_OF_KEYS);

    void* symbol = new(Symbol, id, local_symbol_table, def_type, symbol_attributes);

    if (NULL != init_expr) {
        symbol_set_attr(symbol, KEY_INIT_EXPR, init_expr);
    }

    symbol_table_define(local_symbol_table, id, symbol);

#if defined(DEBUG)
    vi_log("ret var_init()\n");
#endif // DEBUG

    return symbol;
}



// Grammar
// val_decl -> "val" val_init ("," val_init)* ";" ;
// val_init -> IDENTIFIER ("=" expr)? ;

void* val_decl(
    struct Parser* self,
    enum DefinitionType def_type, bool init_required
) {

#if defined(DEBUG)
    vi_log("val_decl()\n");
#endif // DEBUG

    if (!P_MATCH(self, TOKEN_TYPE_VAL)) {
        p_raise_error(
            self, CUR_TOKEN(self),
            "SyntaxError: Expected 'val' found '%.*s'.",
            CUR_TOKEN(self)->length, CUR_TOKEN(self)->start
        );
        return NULL;
    }

    const struct Token* val_token = CUR_TOKEN(self);
    P_ADVANCE(self);

    void* symbol = val_init(self, val_token, def_type, init_required);

    if (NULL == symbol)
        return NULL;

    uint32_t symbols_count = 0;

    void** symbols = allocate(sizeof(void*), ++symbols_count);
    symbols[symbols_count - 1] = symbol;

    const struct Token* comma_token = NULL;

    while (P_MATCH(self, TOKEN_TYPE_COMMA)) {
        comma_token = CUR_TOKEN(self);
        P_ADVANCE(self);

        symbol = val_init(self, comma_token, def_type, init_required);

        if (NULL == symbol) {
            free(symbols);
            return NULL;
        }

        symbols = reallocate(symbols, sizeof(void*), ++symbols_count);
        symbols[symbols_count - 1] = symbol;
    }

    if (!P_CONSUME(self, TOKEN_TYPE_SEMICOLON)) {
        free(symbols);

        p_raise_error(
            self, val_token,
            "SyntaxError: Expected ';' after val statement."
        );

        return NULL;
    }

    symbols = reallocate(symbols, sizeof(void*), ++symbols_count);
    symbols[symbols_count - 1] = NULL;

#if defined(DEBUG)
    vi_log("ret var_decl()\n");
#endif // DEBUG

    return new(VarDecl, symbols);
}


// Grammar
// val_init -> IDENTIFIER "=" expr ;

void* val_init(
    struct Parser* self, const struct Token* prev_token,
    enum DefinitionType def_type, bool init_required
) {

#if defined(DEBUG)
    vi_log("val_init()\n");
#endif // DEBUG

    const struct Token* id_token = NULL;

    if (P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
        id_token = CUR_TOKEN(self);
        P_ADVANCE(self);
    }
    else {
        p_raise_error(
            self, prev_token,
            "SyntaxError: Expected Identifier after '%.*s'.", prev_token->length, prev_token->start
        );

        return NULL;
    }


    char* id = allocate(sizeof(char), id_token->length + 1);
    strncpy(id, id_token->start, id_token->length);

    const void* local_symbol_table = symtabstack_get_local_table(self->symbol_table_stack);

    // if(NULL != symtabstack_lookup(self->symbol_table_stack, id)) {
    if (NULL != symbol_table_lookup(local_symbol_table, id)) {
        p_raise_error(
            self, id_token,
            "Error: Redefinition of '%s'.", id
        );
        free(id);
        return NULL;
    }

    void* init_expr = NULL;

    if (init_required) {
        if (!P_MATCH(self, TOKEN_TYPE_EQUAL)) {
            free(id);

            p_raise_error(
                self, id_token,
                "Error: Expected some initializer expression."
            );
            return NULL;
        }
        else {
            const struct Token* equal_token = CUR_TOKEN(self);
            P_ADVANCE(self);

            init_expr = expr(self);

            if (NULL == init_expr) {
                free(id);

                p_raise_error(
                    self, equal_token,
                    "SyntaxError: Expected some expression after '='."
                );
                return NULL;
            }
        }
    }

    void** symbol_attributes = allocate(sizeof(void*), TOTAL_NO_OF_KEYS);

    void* symbol = new(Symbol, id, local_symbol_table, def_type, symbol_attributes);

    if (NULL != init_expr) {
        symbol_set_attr(symbol, KEY_INIT_EXPR, init_expr);
    }

    symbol_table_define(local_symbol_table, id, symbol);

#if defined(DEBUG)
    vi_log("ret val_init()\n");
#endif // DEBUG

    return symbol;
}


// Grammar
// fun_decl ->  "fun" function ;

void* fun_decl(struct Parser* self) {
#if defined(DEBUG)
    vi_log("fun_decl()\n");
#endif // DEBUG

    if (!P_MATCH(self, TOKEN_TYPE_FUN)) {

        if (!P_MATCH(self, TOKEN_TYPE_EOF)) {
            p_raise_error(
                self, CUR_TOKEN(self),
                "SyntaxError: Expected 'fun', found '%.*s'.",
                CUR_TOKEN(self)->length, CUR_TOKEN(self)->start
            );
        }

        return NULL;
    }

    const struct Token* fun_token = CUR_TOKEN(self);
    P_ADVANCE(self);

    void* fun_declaration = function(self, DEF_TYPE_FUN);

#if defined(DEBUG)
    vi_log("ret fun_decl()\n");
#endif // DEBUG

    return fun_declaration;
}


// Grammar
// function		->  IDENTIFIER '(' parameters? ')' '{' declaration* '}' ;
// parameters	->  IDENTIFIER (',' IDENTIFIER) ;

void* function(
    struct Parser* self,
    enum DefinitionType def_type
) {

#if defined(DEBUG)
    vi_log("function(def_type: %d)\n", def_type);
#endif // DEBUG

    const struct Token* fun_id_token = NULL;

    if (P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
        fun_id_token = CUR_TOKEN(self);
        P_ADVANCE(self);
    }
    else {

        if (DEF_TYPE_FUN == def_type) {
            p_raise_error(
                self, PREV_TOKEN(self),
                "SyntaxError: Expected function's name after '%.*s'",
                PREV_TOKEN(self)->length, PREV_TOKEN(self)->start
            );
        }
        else {
            p_raise_error(
                self, PREV_TOKEN(self),
                "SyntaxError: Expected some method after '%.*s'",
                PREV_TOKEN(self)->length, PREV_TOKEN(self)->start
            );
        }

        return NULL;
    }

    char* fun_id = allocate(sizeof(char), fun_id_token->length + 1);
    strncpy(fun_id, fun_id_token->start, fun_id_token->length);


    // check if somtheing is already defined with that name
    const void* id_symbol = symtabstack_lookup(self->symbol_table_stack, fun_id);

    if (NULL != id_symbol) {
        if (DEF_TYPE_VAR == SYMBOL_GET_DEF_TYPE(id_symbol)) {
            p_raise_error(
                self, fun_id_token,
                "Error: '%s' already declared as a varible.", fun_id
            );
        }
        else if (DEF_TYPE_VAL == SYMBOL_GET_DEF_TYPE(id_symbol)) {
            p_raise_error(
                self, fun_id_token,
                "Error: '%s' already declared as a val constant.", fun_id
            );
        }
        else if (DEF_TYPE_FUN == SYMBOL_GET_DEF_TYPE(id_symbol)) {
            p_raise_error(
                self, fun_id_token,
                "Error: Redefinition of function '%s'.", fun_id
            );
        }
        else {
            p_raise_error(
                self, fun_id_token,
                "Error: Redefinition of '%s'.", fun_id
            );
        }
        free(fun_id);

        return NULL;
    }


    const struct Token* lparen_token = NULL;

    if (P_MATCH(self, TOKEN_TYPE_LPAREN)) {
        lparen_token = CUR_TOKEN(self);
        P_ADVANCE(self);
    }
    else {
        free(fun_id);

        p_raise_error(
            self, fun_id_token,
            "SyntaxError: Expected '(' after '%.*s'", fun_id_token->length, fun_id_token->start
        );

        return NULL;
    }

    const void* parent_symbol_table = symtabstack_get_local_table(self->symbol_table_stack);
    const void* fun_symbol_table = symtabstack_push(self->symbol_table_stack);

    int param_count = 0;
    void** param_symbols = NULL;


    // parse the parameters
    if (P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
        const struct Token* param_token = CUR_TOKEN(self);
        P_ADVANCE(self);



        char* param_id = allocate(sizeof(char), param_token->length + 1);
        strncpy(param_id, param_token->start, param_token->length);

        void* param_symbol = new(Symbol, param_id, fun_symbol_table, DEF_TYPE_VAR, NULL);
        symbol_table_define(fun_symbol_table, param_id, param_symbol);



        param_symbols = allocate(sizeof(void*), ++param_count);
        param_symbols[param_count - 1] = param_symbol;

        while (P_MATCH(self, TOKEN_TYPE_COMMA)) {
            const struct Token* comma_token = CUR_TOKEN(self);
            P_ADVANCE(self);

            if (!P_MATCH(self, TOKEN_TYPE_IDENTIFIER)) {
                delete((void*)symtabstack_pop(self->symbol_table_stack));

                p_raise_error(
                    self, comma_token,
                    "SyntaxError: Expected some parameter after ','."
                );

                return NULL;
            }

            param_token = CUR_TOKEN(self);
            P_ADVANCE(self);

            if (param_count >= MAX_PARAM_COUNT) {
                p_raise_error(
                    self, param_token,
                    "Error: Cannot have more than %d parameters.", MAX_PARAM_COUNT
                );

                return NULL;
            }

            param_id = allocate(sizeof(char), param_token->length + 1);
            strncpy(param_id, param_token->start, param_token->length);

            if (NULL != symbol_table_lookup(fun_symbol_table, param_id)) {
                delete((void*)symtabstack_pop(self->symbol_table_stack));

                p_raise_error(
                    self, param_token,
                    "Error: Parameter redefinition of '%s'.", param_id
                );

                return NULL;
            }

            param_symbol = new(Symbol, param_id, fun_symbol_table, DEF_TYPE_VAR, NULL);
            symbol_table_define(fun_symbol_table, param_id, param_symbol);

            param_symbols = reallocate(param_symbols, sizeof(void *), ++param_count);
            param_symbols[param_count - 1] = param_symbol;
        }
    }

    const struct Token* rparen_token = NULL;

    if (P_MATCH(self, TOKEN_TYPE_RPAREN)) {
        rparen_token = CUR_TOKEN(self);
        P_ADVANCE(self);
    }
    else {
        delete((void*)symtabstack_pop(self->symbol_table_stack));
        free(param_symbols);

        p_raise_error(
            self, lparen_token,
            "SyntaxError: Unmatched '(', expected corresponding ')'."
        );
        return NULL;
    }

    // define the fun's symbol to allow recursion
    const void* fun_symbol = new(Symbol, fun_id, parent_symbol_table, def_type, NULL);
    symbol_table_define(parent_symbol_table, fun_id, fun_symbol);

    const struct Token* lbrace_token = NULL;

    self->parsing_fun = true;

    if (P_MATCH(self, TOKEN_TYPE_LCURLY_BRACE)) {
        lbrace_token = CUR_TOKEN(self);
        P_ADVANCE(self);
    }
    else {
        delete((void*)symtabstack_pop(self->symbol_table_stack));
        free(param_symbols);

        p_raise_error(
            self, rparen_token,
            "SyntaxError: Expected '{' after ')'."
        );
        return NULL;
    }

    int decl_count = 0;
    void** declarations = NULL;

    #define FUN_FREE(self, decls, count) \
		do { \
			for(int i = 0; i < count; i++) \
				delete(decls[i]); \
			free(decls); 		\
			free(param_symbols);\
			\
			delete((void *) symtabstack_pop(self->symbol_table_stack)); \
		} while(0)


    while (!p_match_any(self, 2, TOKEN_TYPE_RCURLY_BRACE, TOKEN_TYPE_EOF)) {
        void* decl = declaration(self);

        if (NULL == decl) {
            FUN_FREE(self, declarations, decl_count);
            return NULL;
        }

        declarations = reallocate(declarations, sizeof(void*), ++decl_count);
        declarations[decl_count - 1] = decl;
    }

    if (!P_CONSUME(self, TOKEN_TYPE_RCURLY_BRACE)) {
        FUN_FREE(self, declarations, decl_count);

        p_raise_error(
            self, lbrace_token,
            "SyntaxError: Unmatched '{', expected corresponding '}'."
        );

        return NULL;
    }

    declarations = reallocate(declarations, sizeof(void*), ++decl_count);
    declarations[decl_count - 1] = NULL;

    symtabstack_pop(self->symbol_table_stack);	// pop fun's symbol_table


    void* fun_declaration = new(
        FunDecl, fun_symbol, fun_symbol_table,
        param_count, param_symbols, declarations
    );

    self->parsing_fun = false;
